layers menu z-index fix

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -140,9 +140,9 @@ Menu principal
 .panel-default > .panel-heading > .panel-title > a {
   font-size: 15px;
 }
-/* #sidebar-container {
-  z-index: 1500;
-} */
+#sidebar-container {
+  z-index: 500;
+}
 #sidebar .nav {
   border: 1px;
 }
